# nanobot-rs

./: Cargo.toml  LICENSE  README.en.md  README.md
.github/workflows/: ci.yml
bridge/src/: index.ts  server.ts
skills/: README.md
skills/memory/: SKILL.md
src/: bus.rs  config.rs  health.rs  heartbeat.rs  lib.rs  main.rs  memory.rs  pairing.rs  session.rs  skills.rs  utils.rs
src/agent/: context.rs  loop.rs  mod.rs  subagent.rs
src/channels/: base.rs  dingtalk.rs  discord.rs  email.rs  feishu.rs  manager.rs  mochat.rs  mod.rs  qq.rs  slack.rs  telegram.rs  whatsapp.rs
src/cron/: mod.rs  service.rs  types.rs
src/providers/: mod.rs  openai.rs  transcription.rs
src/tools/: base.rs  cron.rs  filesystem.rs  http.rs  message.rs  mod.rs  registry.rs  sessions.rs  shell.rs  spawn.rs  web.rs
src/webui/: app.css  app.js  index.html  mod.rs
