[package]
name = "nanobot-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
feishu-websocket = ["dep:open-lark"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
cron = "0.15"
dirs = "6.0"
futures-util = "0.3"
html-escape = "0.2"
open-lark = { version = "0.14.0", default-features = false, features = ["im", "websocket"], optional = true }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }
which = "7.0"

[patch.crates-io]
lark-websocket-protobuf = { path = "vendor/lark-websocket-protobuf-0.1.1" }
